--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/efeuruk/Airbnb-Clone#readme",
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.1",
     "exports-loader": "^0.7.0",
@@ -37,7 +36,7 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "@beyonk/google-fonts-webpack-plugin": "^1.2.3",
+    "@chenfengyuan/datepicker": "^1.0.9",
     "bootstrap": "^4.4.1",
     "dotdotdot-js": "^4.0.10",
     "jquery": "^3.4.1",
